--- a/src/EstuFaltas.form
+++ b/src/EstuFaltas.form
@@ -156,10 +156,22 @@
                   <Font name="Leelawadee UI Semilight" size="11" style="0"/>
                 </Property>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="3" rowCount="20">
-                    <Column editable="false" title="Nombre del Estudiante" type="java.lang.String"/>
-                    <Column editable="false" title="Cuenta" type="java.lang.String"/>
-                    <Column editable="false" title="Faltas" type="java.lang.String"/>
+                  <Table columnCount="3" rowCount="3">
+                    <Column editable="false" title="Nombre del Estudiante" type="java.lang.String">
+                      <Data value="Astrid"/>
+                      <Data value="Santiago"/>
+                      <Data value="Selvin"/>
+                    </Column>
+                    <Column editable="false" title="Cuenta" type="java.lang.String">
+                      <Data value="45897212"/>
+                      <Data value="20172016"/>
+                      <Data value="56457620"/>
+                    </Column>
+                    <Column editable="false" title="Faltas" type="java.lang.String">
+                      <Data value="15"/>
+                      <Data value="20"/>
+                      <Data value="17"/>
+                    </Column>
                   </Table>
                 </Property>
                 <Property name="autoResizeMode" type="int" value="3"/>
@@ -195,7 +207,9 @@
               <Font name="Leelawadee UI Semilight" size="14" style="0"/>
             </Property>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="0"/>
+              <StringArray count="1">
+                <StringItem index="0" value="Instalaciones Electricas"/>
+              </StringArray>
             </Property>
           </Properties>
           <Events>
@@ -213,7 +227,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="e0" green="98" red="51" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Asignatura"/>
+            <Property name="text" type="java.lang.String" value="Clase:"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel2">
