--- a/src/InfDiario.form
+++ b/src/InfDiario.form
@@ -219,7 +219,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Leelawadee UI Semilight" size="14" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="5"/>
+            <Property name="text" type="java.lang.String" value="3"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel2">
@@ -258,7 +258,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="e0" green="98" red="51" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Asignatura"/>
+            <Property name="text" type="java.lang.String" value="Clase:"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel7">
